@@ -1,5 +1,6 @@
 --- Version 0.1.2 ---
 Menus now work in OpenGL!
+Automap works in OpenGL!
 You can now use the -tmap option to select between the different
 texture mapping routines (c, fp, i386, pent, ppro) at runtime.
 Please bear with me while the source undergoes some rather ugly
